Fixed Header and Layout
Added a header image and fixed general layout issues.

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,12 @@
 
 .jumbotron {
 	margin-top: 3em;
+	background: url('../images/jumbotron.jpg') no-repeat center center fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	color: #DDD !important;
 }
 
 #pagination {
